# sch-lib

./: .gitignore  README.md  build.bat  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_test.py
.github/workflows/: main.yml
charts/: 1.mermaid
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.mts
docs/.vitepress/theme/style/: custom-block.css  index.css  var.css
docs/charts/1/: index.md
docs/guide/avatar/: index.md
docs/guide/compress/bzip/: index.md
docs/guide/compress/gzip/: index.md
docs/guide/compress/lzma/: index.md
docs/guide/config/convert/: index.md
docs/guide/config/loader/: index.md
docs/guide/database/mysql/: index.md
docs/guide/database/mysql/table/: index.md
docs/guide/database/sqlite/: index.md
docs/guide/database/sqlite/table/: index.md
docs/guide/installation/: index.md
docs/guide/introduction/: index.md
docs/guide/logger/: index.md
docs/guide/logger/config/: index.md
docs/guide/mysql/: index.md
docs/guide/mysql/mysql/: index.md
docs/guide/mysql/table/: index.md
docs/guide/quickstart/: index.md
docs/guide/s3/: index.md
docs/guide/utils/base64/: index.md
docs/guide/utils/clip/: index.md
docs/guide/utils/ip/: index.md
docs/guide/utils/mac/: index.md
docs/guide/utils/markdown/: index.md
docs/guide/utils/mermaid/: index.md
docs/guide/utils/password/: index.md
docs/guide/utils/qrcode/: index.md
sch/: __init__.py  s3.py
sch/avatar/: __init__.py  constants.py  enum.py  generator.py
sch/compress/: __init__.py  bzip.py  compress.py  gzip.py  lzma.py
sch/config/: __init__.py  config.py  convert.py  enum.py
sch/db/: __init__.py  database.py  mysql.py  sqlite.py
sch/i18n/: __init__.py  build.py  i18n.py
sch/image_api/: __init__.py  base_image.py  constants.py  exception.py  lsky.py
sch/interval/: run_interval.py
sch/led_control/: led.py
sch/logger/: __init__.py  config.py  logger.py
sch/mysql/: __init__.py  constants.py  model.py  mysql.py  table.py
sch/openlist/: __init__.py  model.py  openlist.py  user.py
sch/s3/: s3.py
sch/util/: __init__.py  base64.py  clip.py  env.py  ip.py  mac.py  mac_table.py  markdown.py  mermaid.py  password.py  qrcode.py
test/: __init__.py  config_test.py  test_avatar.py  test_compress.py  test_config.py  test_mysql.py  test_s3.py
