[project]
name = "sch-lib"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.40.10",
    "bs4>=0.0.2",
    "cryptography>=45.0.6",
    "dotenv>=0.9.9",
    "pillow>=11.3.0",
    "pymysql>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.43",
    "toml>=0.10.2",
]

[tool.setuptools]
packages = ["sch"]

[project.scripts]
run-interval = "sch.interval.run_interval:main"
led = "sch.led_control.led:main"

[dependency-groups]
dev = [
    "boto3-stubs[full]>=1.40.10",
    "pdoc>=15.0.4",
]
