[project]
name = "sch-lib"
version = "1.0.3"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.2",
    "toml>=0.10.2",
]

[project.optional-dependencies]
mysql = [
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.43",
]
s3 = [
    "boto3>=1.40.10",
]
image = [
    "pillow>=11.3.0",
]
qrcode = [
    "qrcode>=8.2",
]
request = [
    "bs4>=0.0.2",
    "requests>=2.32.4",
    "fake-useragent>=2.2.0",
]
clip = [
    "pyperclip>=1.9.0",
]
markdown = [
    "markdown>=3.9",
    "markdownify>=1.2.0",
]
all = [
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.43",
    "boto3>=1.40.10",
    "pillow>=11.3.0",
    "bs4>=0.0.2",
    "requests>=2.32.4",
    "pyperclip>=1.9.0",
    "markdown>=3.9",
    "markdownify>=1.2.0",
]

[tool.setuptools]
packages = [
    "sch",
    "sch.avatar",
    "sch.config",
    "sch.image_api",
    "sch.interval",
    "sch.led_control",
    "sch.logger",
    "sch.mysql",
    "sch.openlist",
    "sch.util",
    "sch.s3"
]

[project.scripts]
run-interval = "sch.interval.run_interval:main"
led = "sch.led_control.led:main"

[dependency-groups]
dev = [
    "boto3-stubs[full]>=1.40.10",
    "pdoc>=15.0.4",
    "pip>=25.2",
    "setuptools>=80.9.0",
]
